--- a/front-and-back-matter/_abstract.Rmd
+++ b/front-and-back-matter/_abstract.Rmd
@@ -1,6 +1,6 @@
 Progress towards ending AIDS as a public health threat by 2030 is faltering.
 Effective public health response requires accurate, timely, high-resolution estimates of epidemic and demographic indicators.
-Limitations of available data make obtaining such estimates difficult.
+Limitations of available data make obtaining these estimates difficult.
 I develop and apply Bayesian spatio-temporal methods to meet this challenge.
 Firstly, I examine models for area-level spatial structure.
 Secondly, I estimate district-level HIV risk group proportions, enabling behavioural prioritisation of prevention services, as put forward by the Global AIDS Strategy.
