--- a/references.bib
+++ b/references.bib
@@ -581,6 +581,14 @@ URL= {https://www.r-inla.org/faq},
   note={Accessed: June 2023}
 }
 
+@misc{unaids2022global,
+  title={In Danger: UNAIDS Global AIDS Update 2022},
+  author={{UNAIDS}},
+  year={2022},
+  howpublished={\url{https://www.unaids.org/en/resources/documents/2022/in-danger-global-aids-update}},
+  note={Accessed: June 2023}
+}
+
 @Manual{multiutils,
   title = {multi.utils: Utility functions for multi-agyw},
   author = {Adam Howes},
@@ -811,4 +819,10 @@ URL= {https://www.r-inla.org/faq},
   pages={319--392},
   year={2009},
   publisher={Wiley Online Library}
+}
+
+@article{gelman2005analysis,
+  title={Analysis of variance—why it is more important than ever},
+  author={Gelman, Andrew},
+  year={2005}
 }
