--- a/03-bayesian.Rmd
+++ b/03-bayesian.Rmd
@@ -33,38 +33,45 @@ knitr::opts_chunk$set(
 
 ## Bayesian statistics
 
-Bayesian statistics is a mathematical paradigm for learning from data.
-I provide a brief overview in this section.
+Bayesian statistics is a mathematical paradigm for learning from data, that allows flexible and principled incorporation of scientific knowledge.
+As such, it is particularly well suited for attending to the challenges I present in Section \ref{sec:surveillance} wherein the data demands careful analysis.
+In this section I provide brief overview.
 For a more complete introduction, I recommend @mcelreath2020statistical or @gelman2013bayesian.
 
 ### Bayesian modelling
 
 At its best, the Bayesian paradigm allows the analyst focus on how best to model the data.
-This is achieved by the construction of a generative model $p(\y, \bvartheta)$ for the observed data $\y = (y_1, \ldots, y_n)$ together with parameters $\bvartheta = (\vartheta_1, \ldots, \vartheta_d)$.
-The model is generative in the sense that one can simulate from it to obtain draws $(\y, \bvartheta) \sim p(\y, \bvartheta)$.
+This is achieved by the construction of a generative model $p(\y, \bvartheta)$ for the observed data $\y = (y_1, \ldots, y_n)$ together with parameters $\bvartheta = (\vartheta_1, \ldots, \vartheta_d)$, where $n$ is the dimension of the data and $d$ is the number of parameters.
+The model is generative in the sense that one can simulate from it to obtain draws
+\begin{equation}
+(\y, \bvartheta) \sim p(\y, \bvartheta)
+\end{equation}
 If these draws differ too greatly from what the analyst would expect, then the generative model can be refined.
-In this way, models can be built iteratively, and complexity added gradually. 
+In this way, models can be built iteratively, with complexity added gradually. 
 
 The model is usually constructed from two parts, known as the likelihood $p(\y \, | \, \bvartheta)$ and the prior $p(\bvartheta)$ whereby $p(\y, \bvartheta) = p(\y \, | \, \bvartheta) p(\bvartheta)$.
 The likelihood, as a function of $\bvartheta$ with $\y$ fixed, reflects the probability of observing the data when the true value of the parameters is $\bvartheta$.
 The prior encapsulates beliefs about the parameters $\bvartheta$ before the data is observed.
-There has been substantial discussion and disagreement about how the prior should be specified.
-That said, the distinction between likelihood and prior can sometimes be blurred (Section \@ref(hierarchical-lgm-elgm)).
+There has been substantial discussion about how the prior should be specified.
+The main axis of disagreement is the degree of subjectivity which should be allowed.
+However, the distinction between likelihood and prior can sometimes be blurred (Section \@ref(hierarchical-lgm-elgm)).
 As such, it may be argued that these difficulties are not unique to the prior and ultimately the challenge of specifying the data generating process is better thought of more holistically [@gelman2017prior].
 
 ### Bayesian computation
 
-The posterior distribution $p(\bvartheta \, | \, \y)$ represents beliefs about the parameters given the observed data.
+The posterior distribution $p(\bvartheta \, | \, \y)$ encapsulates probabilistic beliefs about the parameters given the observed data.
 Using the eponymous Bayes' theorem, it is given by
 \begin{equation}
 p(\bvartheta \, | \, \y) = \frac{p(\y \, | \, \bvartheta) p(\bvartheta)}{p(\y)}. \label{eq:posterior}
 \end{equation}
 Unfortunately, Equation \ref{eq:posterior} is usually intractable to calculate directly because of the integral $p(\y) = \int p(\y, \bvartheta) \text{d}\bvartheta$ in the denominator.
-As such, the typically situation is that although the numerator is proportional to the posterior $p(\bvartheta \, | \, \y) \propto p(\y \, | \, \bvartheta) p(\bvartheta)$ and easy to evaluate, it is not easy to evaluate the posterior itself.
+As such, the typical situation is that although the numerator is proportional to the posterior $p(\bvartheta \, | \, \y) \propto p(\y \, | \, \bvartheta) p(\bvartheta)$ and easy to evaluate, it is difficult to evaluate the posterior itself.
 
-A great variety of computational methods have been developed which aim to tackle this problem.
-Markov chain Monte Carlo (MCMC) is the most popular approach, and proceeds by simulating samples from a Markov chain with the posterior as its stationary distribution.
-Variational Bayes approaches assume the posterior distribution belongs to a certain class of functions and use optimisation to choose the best member of that class.
+A great variety of computational methods have been developed to tackle this problem.
+Briefly, the main categories are:
+
+* Markov chain Monte Carlo (MCMC) is the most popular approach, and proceeds by simulating samples from a Markov chain with the posterior as its stationary distribution.
+* Variational Bayes approaches assume the posterior distribution belongs to a certain class of functions and use optimisation to choose the best member of that class.
 
 ### Interplay between modelling and computation
 
@@ -94,7 +101,7 @@ Real world data usually has hierarchical structure.
 For example, there might be multiple measurements of the same unit (Figure \ref{fig:hierarchical-structure}).
 
 Bayesian hierarchical models are comprised of multiple stages.
-For example in a three-stage model, we have
+For example in a three-stage model, we have $\bvartheta = (\x, \btheta) = (x_1, \ldots, x_N, \theta_1, \ldots, \theta_m)$ such that
 \begin{align}
 \y &\sim p(\y \, | \, \x, \btheta), \\
 \x &\sim p(\x \, | \, \btheta), \\
@@ -106,17 +113,23 @@ with posterior proportional to $p(\x, \btheta \, | \, \y) \propto p(\y \, | \, \
 knitr::include_graphics("figures/hierarchical-structure.pdf")
 ```
 
+### Mixed effects
+
+Mixed effect models contain both fixed and random effects.
+Fixed and random effects have notoriously many different definitions [@gelman2005analysis], but nonetheless.
+Partial pooling.
+Structured random effects.
+
 ### Latent Gaussian models
 
 Latent Gaussian models [LGMs; @rue2009approximate] are a class of three-stage Bayesian hierarchical models in which, loosely speaking, the middle layer is Gaussian.
 More specifically, in an LGM, the likelihood is given by
 \begin{align*}
-y_i &\sim p(y_i \, | \, \eta_i, \theta_1), \quad i \in [n]\\
+y_i &\sim p(y_i \, | \, \eta_i, \theta_1), \quad i = 1, \ldots, n, \\
 \mu_i &= \mathbb{E}(y_i \, | \, \eta_i) = g(\eta_i), \\
-\eta_i &= \beta_0 + \sum_{l = 1}^{p} \beta_j z_{ji} + \sum_{k = 1}^{r} f_k(u_{ki}),
+\eta_i &= \beta_0 + \sum_{l = 1}^{p} \beta_j z_{ji} + \sum_{k = 1}^{r} f_k(u_{ki}).
 \end{align*}
-where $[n] = \{1, \ldots, n\}$.
-The response variable is $\y = (y)_{i \in [n]}$ with likelihood $p(\y \, | \, \bmeta, \btheta_1) = \prod_{i = 1}^n p(y_i \, | \, \eta_i, \btheta_1)$, where $\bmeta = (\eta)_{i \in [n]}$.
+The likelihood is $p(\y \, | \, \bmeta, \btheta_1) = \prod_{i = 1}^n p(y_i \, | \, \eta_i, \btheta_1)$, where $\bmeta = (\eta_1, \ldots, \eta_n)$.
 Each response has conditional mean $\mu_i$ with inverse link function $g: \mathbb{R} \to \mathbb{R}$ such that $\mu_i = g(\eta_i)$.
 The vector $\btheta_1 \in \mathbb{R}^{s_1}$, with $s_1$ assumed small, are additional parameters of the likelihood.
 The structured additive predictor $\eta_i$ may include an intercept $\beta_0$, linear effects $\beta_j$ of the covariates $z_{ji}$, and unknown functions $f_k(\cdot)$ of the covariates $u_{ki}$.
@@ -136,15 +149,19 @@ Some leading-edge spatio-temporal models used in small-area estimation fall outs
 <!-- There are other complex models from [ecology](https://www.bioss.ac.uk/rsse/2013/September2013slides-Illian.pdf) that can't currently be fit using `R-INLA` -->
 However, many of these models do fit into the class of extended latent Gaussian models (ELGMs) as proposed by @stringer2021fast.
 By allowing many-to-one link functions, ELGMs facilitate modelling of non-linearities.
-In particular, the structured additive predictor is redefined as $\bmeta = (\eta)_{i \in [N_n]}$, where $N_n \in \mathbb{N}$ is a function of $n$, and it is possible that $N_n \neq n$.
-Each mean response $\mu_i$ now depends on some subset $\mathcal{J}_i \subseteq [N_n]$ of indices of $\bmeta$, with $\cup_{i = 1}^n \mathcal{J}_i = [N_n]$ and $1 \leq |\mathcal{J}_i| \leq N_n$.
+In particular, the structured additive predictor is redefined as $\bmeta = (\eta_1, \ldots \eta_{N_n})$, where $N_n \in \mathbb{N}$ is a function of $n$, and it is possible that $N_n \neq n$.
+Each mean response $\mu_i$ now depends on some subset $\mathcal{J}_i \subseteq [N_n]$ of indices of $\bmeta$, with $\cup_{i = 1}^n \mathcal{J}_i = [N_n]$ and $1 \leq |\mathcal{J}_i| \leq N_n$, where $[N_n] = \{1, \ldots, N_n\}$.
 The inverse link function $g(\cdot)$ is redefined for each observation to be a possibly many-to-one mapping $g_i: \mathbb{R}^{|\mathcal{J}_i|} \to \mathbb{R}$, such that $\mu_i = g_i(\bmeta_{\mathcal{J}_i})$.
 Put together, ELGMs are then of the form
 \begin{align*}
-y_i &\sim p(y_i \, | \, \bmeta_{\mathcal{J}_i}, \btheta_1), \quad i \in [n] \\
+y_i &\sim p(y_i \, | \, \bmeta_{\mathcal{J}_i}, \btheta_1), \quad i = 1, \ldots, n, \\
 \mu_i &= \mathbb{E}(y_i \, | \, \bmeta_{\mathcal{J}_i}) = g_i(\bmeta_{\mathcal{J}_i}), \\
 \eta_j &= \beta_0 + \sum_{l = 1}^{p} \beta_j z_{ji} + \sum_{k = 1}^{r} f_k(u_{ki}), \quad j \in [N_n],
 \end{align*}
 with latent field and hyperparameter priors as in the LGM case.
 
-Instances of ELGM structures being useful for small-area estimation are as follows.
+In my experience, the ELGMs class is well suited to the demands of small-area estimation.
+Indeed, I will use this class of models throughout the thesis.
+In Chapter \@ref(beyond-borders) I consider...
+While I am able to transform it to an LGM using the Poisson-multinomial transformation, the multinomial logistic regression model I use in Chapter \@ref(multi-agyw) is naturally written as an ELGM where each observation depends on the set of structured additive predictors corresponding to...
+Finally, Chapter \@ref(naomi-aghq) I show that the Naomi small-area estimation model used to produce estimates of HIV indicators across over 35 countries is an ELGM.
